feat: 폰트 스타일 및 로딩 최적화 적용

--- a/src/styles/fonts/fonts.css
+++ b/src/styles/fonts/fonts.css
@@ -2,48 +2,63 @@
   font-family: 'Pretendard';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src:
     local('Pretendard Bold'),
     local('Pretendard-Bold'),
     url('./Pretendard/Pretendard-Bold.woff') format('woff');
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-style: normal;
   font-weight: 600;
+  font-display: swap;
   src:
     local('Pretendard SemiBold'),
     local('Pretendard-SemiBold'),
     url('./Pretendard/Pretendard-SemiBold.woff') format('woff');
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
   src:
     local('Pretendard Medium'),
     local('Pretendard-Medium'),
     url('./Pretendard/Pretendard-Medium.woff') format('woff');
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src:
     local('Pretendard Regular'),
     local('Pretendard-Regular'),
     url('./Pretendard/Pretendard-Regular.woff') format('woff');
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @font-face {
   font-family: 'Daiso';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src:
     local('Daiso'),
     local('Daiso'),
     url('./DAISOA/Daisofont.woff') format('woff');
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
